--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    
+    <!--Code explanation here (timeline 16:18): https://youtu.be/yH593K9fYvE-->
     <table class="table">
         <thead>
           <tr>
